--- a/app/views/assistance_provider_dashboard/index.html.haml
+++ b/app/views/assistance_provider_dashboard/index.html.haml
@@ -1,1 +1,26 @@
 %h1 Dashboard
+
+%table
+  %thead
+    %th Event type
+    %th Date of event
+    %th Street address
+    %th City
+    %th State
+    %th Zip
+
+  - @events.each do |triggered_event|
+    %tr
+      %td
+        = triggered_event.event_type
+      %td
+        = triggered_event.date_of_event
+      %td
+        = triggered_event.street_address
+      %td
+        = triggered_event.city
+      %td
+        = triggered_event.state
+      %td
+        = triggered_event.zip
+
