--- a/app/views/assistance_providers/create.html.haml
+++ b/app/views/assistance_providers/create.html.haml
@@ -1,3 +1,3 @@
 %h2 Thank you for helping your community!
 
-= link_to 'Login to your dashboard', 'assistance_provider_dashboard#index'
+= link_to 'Go to your dashboard', 'assistance_provider_dashboard#index'
