--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -1,1 +1,68 @@
 
+
+// @import "//fonts.googleapis.com/css?family=Muli:300,400|Roboto:300,400,700";
+
+body {
+    // color: @grayDark;
+    font-size: medium;
+    // background: @bgColor;
+    /* @media (min-width: @bp-desk) {
+        font-size: large;
+    }
+    @media (min-width: @bp-wide) {
+        font-size: larger;
+    }
+    @media (min-width: @bp-superwide) {
+        font-size: x-large;
+    } */
+}
+nav {
+    // .muli;
+}
+h1, h2, h3, h4, h5, h6 {
+    // .muli;
+    b,
+    strong {
+        font-weight: 400;
+    }
+}
+h1, h2, h3 {
+    text-transform: uppercase;
+    // color: @blue;
+}
+h2, h3 {
+    // color: @blue10;
+}
+h4 {
+    font-weight: 400;
+}
+p, ul, ol, li {
+    // .roboto;
+    b,
+    strong {
+        font-weight: 700;
+    }
+}
+p {
+    a {
+        // .underline;
+        padding-bottom: 0.2em;
+        background-size: 1px 1px;
+    }
+}
+input, textarea, select, button,
+.title-bar {
+    // .roboto;
+}
+img {
+    margin: auto;
+    display: block;
+    max-width: 100%;
+}
+a {
+    text-decoration: none;
+    &:hover,
+    &:active {
+        text-decoration: inherit;
+    }
+}
