added ability to create qualified needs

--- a/app/assets/templates/care_coordinator/qualified_need_form.html.haml
+++ b/app/assets/templates/care_coordinator/qualified_need_form.html.haml
@@ -2,11 +2,11 @@
   %fieldset
     %p
       %label{for: :total_needed} Total needed
-      %input{id: :total_needed, 'ng-model' => 'form.totalNeeded'}
+      %input{id: :total_needed, 'ng-model' => 'form.total_needed'}
 
     %p
       %label{for: :poc_name} Point of Contact
-      %input{id: :poc_name, 'ng-model' => 'form.pointOfContact'}
+      %input{id: :poc_name, 'ng-model' => 'form.point_of_contact'}
 
     %p
       %label{for: :poc_phone} Phone
@@ -18,7 +18,7 @@
 
     %p
       %label{for: :street_address} Street address
-      %input{id: :street_address, 'ng-model' => 'form.streetAddress'}
+      %input{id: :street_address, 'ng-model' => 'form.street_address'}
 
     %p
       %label{for: :city} City
