--- a/app/assets/stylesheets/framework.scss
+++ b/app/assets/stylesheets/framework.scss
@@ -5,4 +5,11 @@ header {
     flex-wrap: nowrap;
     align-items: center;
     justify-content: space-between;
+
+    padding: 4rem;
+    background-color: #def;
+    border-bottom: 1px solid #456;
+}
+section {
+    padding: 2rem 4rem;
 }
