--- a/app/assets/stylesheets/mixins.scss
+++ b/app/assets/stylesheets/mixins.scss
@@ -8,6 +8,13 @@
     font-family: 'Roboto', sans-serif;
     font-weight: 300;
 }
+.flex {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    align-items: center;
+    justify-content: space-between;
+}
 // for links
 /* .underline(@color: @colorLink) {
     background-image: linear-gradient(to bottom, darken(@color, 10%), transparent);
