--- a/app/assets/stylesheets/framework.scss
+++ b/app/assets/stylesheets/framework.scss
@@ -1,9 +1,14 @@
 
 header {
-    padding: 4rem;
-    background-color: #def;
-    border-bottom: 1px solid #456;
+    padding: 1rem 3rem;
+    color: #f2f3f4;
+    z-index: 2;
+    position: relative;
+    background-color: #083d77;
+    border-bottom: 1px solid #f2f3f4;
+    box-shadow: 0 0 0 1rem rgba(0, 0, 0, 0.25);
 }
 section {
-    padding: 2rem 4rem;
+    min-height: calc(100vh - 4rem);
+    padding: 2rem 3rem;
 }
