--- a/app/assets/stylesheets/login.scss
+++ b/app/assets/stylesheets/login.scss
@@ -1,8 +1,10 @@
 
-.links {
-    padding: 1rem;
-    justify-content: center;
-    > * {
-        margin: 0 1em;
-    }
+.first {
+    background-color: #cde;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center right;
+    background-image: url("hero1.jpg");
+
+    padding-top: 24%;
 }
