--- a/app/assets/stylesheets/framework.scss
+++ b/app/assets/stylesheets/framework.scss
@@ -1,14 +1,27 @@
 
 header {
-    padding: 1rem 3rem;
+    padding: 1rem;
+    padding-left: 2rem;
     color: #f2f3f4;
     z-index: 2;
     position: relative;
     background-color: #083d77;
     border-bottom: 1px solid #f2f3f4;
-    box-shadow: 0 0 0 1rem rgba(0, 0, 0, 0.25);
+    box-shadow: 0 0 1rem 0.25rem rgba(0, 0, 0, 0.25);
 }
 section {
     min-height: calc(100vh - 4rem);
-    padding: 2rem 3rem;
+    padding: 3rem;
+}
+nav {
+    justify-content: flex-end;
+}
+table {
+    width: 100%;
+}
+tr {
+
+}
+td {
+
 }
