--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -19,7 +19,7 @@ nav {
     font-family: 'Muli', sans-serif;
     font-weight: 300;
 }
-h1, h2, h3, h4, h5, h6 {
+h1, h2, h3, h4, h5, h6, th {
     font-family: 'Muli', sans-serif;
     font-weight: 300;
     b,
@@ -37,7 +37,7 @@ h2, h3 {
 h4 {
     font-weight: 400;
 }
-p, ul, ol, li {
+p, ul, ol, li, td {
     font-family: 'Roboto', sans-serif;
     font-weight: 300;
     b,
