home page stuff

--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -3,8 +3,7 @@
 
 body {
     font-size: medium;
-    background-color: #ebebd3;
-    // background: @bgColor;
+    background-color: #f3f6ef;
     @media (min-width: 1200px) {
         font-size: large;
     }
