--- a/app/assets/stylesheets/login.scss
+++ b/app/assets/stylesheets/login.scss
@@ -5,6 +5,9 @@
     background-repeat: no-repeat;
     background-position: center right;
     background-image: url("hero1.jpg");
-
-    padding-top: 24%;
+    padding-top: 18%;
+    color: #fff;
+    p {
+        width: 50%;
+    }
 }
