--- a/app/assets/templates/care_coordinator/qualified_needs.html.haml
+++ b/app/assets/templates/care_coordinator/qualified_needs.html.haml
@@ -1,5 +1,5 @@
 .qualified-needs
-  %button{'ng-click' => 'addQualifiedNeed()'} Add qualified need
+  %button.add-need{'ng-click' => 'addQualifiedNeed()'} Add qualified need
   %table{'ng-if' => 'qualifiedNeeds && qualifiedNeeds.length > 0'}
     %thead
       %th Total needed
@@ -20,4 +20,3 @@
       %td {{ qualifiedNeed.state }}
       %td {{ qualifiedNeed.zip }}
   %qualified-need-form
-
