--- a/app/assets/stylesheets/mixins.scss
+++ b/app/assets/stylesheets/mixins.scss
@@ -15,6 +15,15 @@
     align-items: center;
     justify-content: space-between;
 }
+.slider {
+    background-color: #fff;
+    border-left: 1px solid #678;
+    box-shadow: 0 0 1rem 0.25rem rgba(0, 0, 0, 0.25);
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+}
 // for links
 /* .underline(@color: @colorLink) {
     background-image: linear-gradient(to bottom, darken(@color, 10%), transparent);
