--- a/app/assets/templates/care_coordinator/events.html.haml
+++ b/app/assets/templates/care_coordinator/events.html.haml
@@ -26,3 +26,8 @@
           %td
             %button{'ng-click' => 'claim(triggeredEvent.id)', 'ng-if' => 'allShowing'}
               Claim
+            %button{'ng-click' => 'takeAction(triggeredEvent.id)', 'ng-if' => '!allShowing'}
+              Action
+
+  %event-action
+
