--- a/app/assets/templates/care_coordinator/event_action.html.haml
+++ b/app/assets/templates/care_coordinator/event_action.html.haml
@@ -3,31 +3,31 @@
     %button{'ng-click' => 'cancel()'} Cancel
 
   %p
-    %label{for: :event_type_field}
+    %label{for: :event_type_field} Event type
     %input{'id' => 'event_type_field', 'ng-model' => 'triggerEvent.eventType'}
 
   %p
-    %label{for: :date_of_event_field}
+    %label{for: :date_of_event_field} Date of event
     %input{'id' => 'event_of_event_field', 'ng-model' => 'triggerEvent.date_of_event'}
 
   %p
-    %label{for: :street_address_field}
+    %label{for: :street_address_field} Street address
     %input{'id' => 'street_address_field', 'ng-model' => 'triggerEvent.street_address'}
 
   %p
-    %label{for: :city_field}
+    %label{for: :city_field} City
     %input{'id' => 'city_field', 'ng-model' => 'triggerEvent.city'}
 
   %p
-    %label{for: :state_field}
+    %label{for: :state_field} State
     %input{'id' => 'state_field', 'ng-model' => 'triggerEvent.state'}
 
   %p
-    %label{for: :zip_field}
+    %label{for: :zip_field} Zip
     %input{'id' => 'zip_field', 'ng-model' => 'triggerEvent.zip'}
 
   %p
-    %label{for: :notes_field}
+    %label{for: :notes_field} Notes
     %textarea{'id' => 'notes_field', 'ng-model' => 'triggerEvent.notes'}
 
   %p
