--- a/app/assets/templates/care_coordinator/event_action.html.haml
+++ b/app/assets/templates/care_coordinator/event_action.html.haml
@@ -1,4 +1,4 @@
-.ng-slide{'ng-if' => 'takingAction'}
+.ng-slide.slider{'ng-if' => 'takingAction'}
   %p
     %button{'ng-click' => 'cancel()'} Cancel
 
