--- a/app/views/assistance_provider_dashboard/index.html.haml
+++ b/app/views/assistance_provider_dashboard/index.html.haml
@@ -1,4 +1,11 @@
-= link_to 'Logout', logout_path
+%header.flex
+  %h1 Ruby Slippers
 
-%h1 Assistance Provider Dashboard
+  %nav.flex
+    %button Log In
+    %button Register
+    = link_to 'Logout', logout_path
+
+%section
+  %h2 Assistance Provider Dashboard
 
