--- a/app/views/care_coordinator_dashboard/index.html.haml
+++ b/app/views/care_coordinator_dashboard/index.html.haml
@@ -1,6 +1,13 @@
-= link_to 'Logout', logout_path
+%header.flex
+  %h1 Ruby Slippers
 
-%h1 Care Coordinator Dashboard
+  %nav.flex
+    %button Log In
+    %button Register
+    = link_to 'Logout', logout_path
 
-%care-coordinator
+%section
+  %h2 Care Coordinator Dashboard
+
+  %care-coordinator
 
