--- a/app/assets/stylesheets/framework.scss
+++ b/app/assets/stylesheets/framework.scss
@@ -11,7 +11,7 @@ header {
 }
 section {
     min-height: calc(100vh - 4rem);
-    padding: 3rem;
+    padding: 2rem;
 }
 nav {
     justify-content: flex-end;
@@ -47,6 +47,11 @@ td {
         text-transform: capitalize;
         font-weight: 400;
     }
+}
+label {
+    color: #546;
+    text-transform: uppercase;
+    font-size: 0.8em;
 }
 .add-need {
     position: fixed;
