--- a/app/assets/stylesheets/mixins.scss
+++ b/app/assets/stylesheets/mixins.scss
@@ -24,6 +24,18 @@
     right: 0;
     bottom: 0;
     width: 40vw;
+    padding: 6rem 2rem 0;
+    display: flex;
+    flex-wrap: nowrap;
+    flex-direction: column;
+    align-items: stretch;
+}
+.input-group {
+    flex: 1;
+    display: flex;
+    flex-wrap: nowrap;
+    flex-direction: column;
+    align-items: stretch;
 }
 // for links
 /* .underline(@color: @colorLink) {
