--- a/app/assets/stylesheets/framework.scss
+++ b/app/assets/stylesheets/framework.scss
@@ -52,6 +52,7 @@ label {
     color: #546;
     text-transform: uppercase;
     font-size: 0.8em;
+    margin-bottom: 0.25rem;
 }
 .add-need {
     position: fixed;
