--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -18,7 +18,7 @@ nav {
     font-family: 'Muli', sans-serif;
     font-weight: 300;
 }
-h1, h2, h3, h4, h5, h6, th {
+h1, h2, h3, h4, h5, h6, th, label {
     font-family: 'Muli', sans-serif;
     font-weight: 300;
     b,
