--- a/app/assets/stylesheets/mixins.scss
+++ b/app/assets/stylesheets/mixins.scss
@@ -29,6 +29,18 @@
     flex-wrap: nowrap;
     flex-direction: column;
     align-items: stretch;
+    .actions {
+        display: flex;
+        padding: 1em;
+        padding-bottom: 3em;
+        flex-wrap: nowrap;
+        justify-content: center;
+        > * {
+            + * {
+                margin-left: 1em;
+            }
+        }
+    }
 }
 .input-group {
     flex: 1;
@@ -36,6 +48,10 @@
     flex-wrap: nowrap;
     flex-direction: column;
     align-items: stretch;
+    input {
+        font-size: 1.1em;
+        padding: 0.25em;
+    }
 }
 // for links
 /* .underline(@color: @colorLink) {
