--- a/app/assets/stylesheets/login.scss
+++ b/app/assets/stylesheets/login.scss
@@ -4,7 +4,7 @@
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center right;
-    background-image: url("hero1.jpg");
+    background-image: url("/hero1.jpg");
     padding-top: 18%;
     color: #fff;
     p {
