--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -6,9 +6,9 @@
     = csrf_meta_tags
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
 
-    -#%script{src: "https://maps.google.com/maps/api/js?key=#{ENV['GMAPS_API_KEY']}"}
-    -#%script{src: 'https://cdn.rawgit.com/mahnunchik/markerclustererplus/master/dist/markerclusterer.min.js'}
-    -#%script{src: 'https://cdn.rawgit.com/printercu/google-maps-utility-library-v3-read-only/master/infobox/src/infobox_packed.js'}
+    %script{src: "https://maps.google.com/maps/api/js?key=#{ENV['GMAPS_API_KEY']}"}
+    %script{src: 'https://cdn.rawgit.com/mahnunchik/markerclustererplus/master/dist/markerclusterer.min.js'}
+    %script{src: 'https://cdn.rawgit.com/printercu/google-maps-utility-library-v3-read-only/master/infobox/src/infobox_packed.js'}
 
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
 
