--- a/app/assets/stylesheets/framework.scss
+++ b/app/assets/stylesheets/framework.scss
@@ -70,6 +70,13 @@ td {
         font-weight: 400;
     }
 }
+button {
+    font-size: 1em;
+    border: 0;
+    background-color: #083d77;
+    padding: 0.5em 1em;
+    color: #fff;
+}
 label {
     color: #546;
     text-transform: uppercase;
