--- a/app/assets/stylesheets/mixins.scss
+++ b/app/assets/stylesheets/mixins.scss
@@ -24,14 +24,16 @@
     right: 0;
     bottom: 0;
     width: 40vw;
-    padding: 6rem 2rem 0;
+    padding: 8rem 2rem 0;
     display: flex;
     flex-wrap: nowrap;
     flex-direction: column;
     align-items: stretch;
     z-index: 5;
     .actions {
+        flex: 1;
         display: flex;
+        align-items: center;
         padding: 1em;
         padding-bottom: 3em;
         flex-wrap: nowrap;
@@ -50,9 +52,18 @@
     flex-direction: column;
     align-items: stretch;
     input {
+        border: 0;
+        border-bottom: 1px solid #657;
+        background-color: #fff;
+        transition: color 250ms ease-in-out,
+                    background-color 250ms ease-in-out;
         font-size: 1.1em;
-        padding: 0.25em;
-
+        padding: 0.5em;
+        &:focus {
+            outline: none;
+            border-color: #083d77;
+            background-color: rgba(255, 232, 255, 0.5);
+        }
     }
 }
 .btn {
@@ -80,7 +91,7 @@
 }
 .tab-group {
     display: flex;
-    padding: 0.5em 0;
+    padding: 1em 0 0.5em;
     > * {
         + * {
             margin-left: 1em;
