--- a/app/assets/stylesheets/framework.scss
+++ b/app/assets/stylesheets/framework.scss
@@ -47,7 +47,7 @@ table {
 tbody {
     tr {
         &:nth-child(odd) {
-            background-color: #fef;
+            background-color: #fff;
         }
         &:nth-child(even) {
             background-color: #efe;
@@ -72,6 +72,7 @@ td {
 }
 button {
     font-size: 1em;
+    border-radius: 0.25rem;
     border: 0;
     background-color: #083d77;
     padding: 0.5em 1em;
@@ -84,6 +85,7 @@ label {
     margin-bottom: 0.25rem;
 }
 .add-need {
+    padding: 0.75em 1.25em;
     position: fixed;
     bottom: 2em;
     right: 2em;
