--- a/app/assets/templates/care_coordinator/event_action.html.haml
+++ b/app/assets/templates/care_coordinator/event_action.html.haml
@@ -30,5 +30,5 @@
   .actions
     %button{'ng-click' => 'cancelEventAction()'} Cancel
     %button{'ng-click' => 'update()'} Update
-    %button{'ng-click' => 'eventResolved()'} Event resolved
-    %button{'ng-click' => 'createQualifiedNeed()'} Create qualified need
+    %button{'ng-click' => 'eventResolved()'} Event Resolved
+    %button{'ng-click' => 'createQualifiedNeed()'} Qualify Need
