--- a/app/assets/stylesheets/mixins.scss
+++ b/app/assets/stylesheets/mixins.scss
@@ -36,12 +36,12 @@
         align-items: center;
         padding: 1em;
         padding-bottom: 3em;
-        flex-wrap: nowrap;
+        flex-wrap: wrap;
         justify-content: center;
         > * {
-            + * {
-                margin-left: 1em;
-            }
+            flex: 1;
+            min-width: 40%;
+            margin: 0 0.5em;
         }
     }
 }
@@ -51,19 +51,32 @@
     flex-wrap: nowrap;
     flex-direction: column;
     align-items: stretch;
-    input {
+    label,
+    input,
+    textarea {
+        padding: 0.5rem;
+    }
+    input,
+    textarea {
         border: 0;
-        border-bottom: 1px solid #657;
         background-color: #fff;
         transition: color 250ms ease-in-out,
-                    background-color 250ms ease-in-out;
-        font-size: 1.1em;
-        padding: 0.5em;
+                    background-color 250ms ease-in-out,
+                    border-color 250ms ease-in-out;
         &:focus {
             outline: none;
-            border-color: #083d77;
             background-color: rgba(255, 232, 255, 0.5);
         }
+    }
+    input {
+        font-size: 1.1em;
+        border-bottom: 1px solid #768;
+        &:focus {
+            border-color: #083d77;
+        }
+    }
+    textarea {
+        font-size: 0.85em;
     }
 }
 .btn {
