--- a/app/assets/templates/care_coordinator/qualified_need_form.html.haml
+++ b/app/assets/templates/care_coordinator/qualified_need_form.html.haml
@@ -32,6 +32,6 @@
     %input{id: :zip, 'ng-model' => 'form.zip'}
 
   .actions
-    %button{'ng-click' => 'cancel()'} Cancel
+    %button.cancel{'ng-click' => 'cancel()'} Cancel
     %button{'ng-click' => 'submit()'} Submit
 
