--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -1,6 +1,4 @@
 
-@import "//fonts.googleapis.com/css?family=Muli:300,400|Roboto:300,400,700";
-
 body {
     font-size: medium;
     background-color: #f3f6ef;
@@ -17,6 +15,10 @@ body {
 nav {
     font-family: 'Muli', sans-serif;
     font-weight: 300;
+    span {
+        color: #bbb;
+        margin: 0.25rem;
+    }
 }
 h1, h2, h3, h4, h5, h6, th, label {
     font-family: 'Muli', sans-serif;
