--- a/app/assets/stylesheets/mixins.scss
+++ b/app/assets/stylesheets/mixins.scss
@@ -1,5 +1,7 @@
 
 // fonts
+@import "//fonts.googleapis.com/css?family=Muli:300,400|Roboto:300,400,700";
+
 .muli {
     font-family: 'Muli', sans-serif;
     font-weight: 300;
@@ -89,8 +91,7 @@
         border: 2px solid;
         color: #fff;
         &:hover {
-            color: #274b85;
-            background-color: rgba(255, 255, 255, 0.75);
+            background-color: lighten(#083d77, 15%);
         }
     }
 }
