--- a/app/assets/templates/care_coordinator/event_action.html.haml
+++ b/app/assets/templates/care_coordinator/event_action.html.haml
@@ -1,7 +1,7 @@
 .ng-slide.slider{'ng-if' => 'takingAction'}
   .input-group
     %label{for: :event_type_field} Event type
-    %input{'id' => 'event_type_field', 'ng-model' => 'triggerEvent.eventType'}
+    %input{'id' => 'event_type_field', 'ng-model' => 'triggerEvent.eventType', :autofocus => 'autofocus'}
 
   .input-group
     %label{for: :date_of_event_field} Date of event
