--- a/app/views/care_coordinator_dashboard/index.html.haml
+++ b/app/views/care_coordinator_dashboard/index.html.haml
@@ -4,7 +4,9 @@
   %nav.flex
     %p
       = current_user.email
-    = link_to 'Logout', logout_path
+    %span &#124;
+    %p
+      = link_to 'Log Out', logout_path
 
 %section
   %h2 Care Coordinator Dashboard
