--- a/app/views/login/index.html.haml
+++ b/app/views/login/index.html.haml
@@ -3,12 +3,10 @@
 
   %nav.flex
     %button Log In
-    %span &#124;
-    %button Register
 
 %section.first
   %h2 This thing
-  %p The American homeless management system is overburdened. No matter how much intelligence is put into a system to assign people to homeless shelters, if there aren't enough beds, people will be out on the street. That's why it's important to focus on the real solution to the problem: *Prevention*.
+  %p.note The American homeless management system is overburdened. No matter how much intelligence is put into a system to assign people to homeless shelters, if there aren't enough beds, people will be out on the street. That's why it's important to focus on the real solution to the problem: *Prevention*.
   %p.btn
     = link_to 'Register as an assistance provider', new_assistance_provider_path
 
