--- a/app/assets/stylesheets/mixins.scss
+++ b/app/assets/stylesheets/mixins.scss
@@ -1,6 +1,7 @@
 
 // fonts
 @import "//fonts.googleapis.com/css?family=Muli:300,400|Roboto:300,400,700";
+@import "//fonts.googleapis.com/css?family=Nothing+You+Could+Do";
 
 .muli {
     font-family: 'Muli', sans-serif;
@@ -9,6 +10,10 @@
 .roboto {
     font-family: 'Roboto', sans-serif;
     font-weight: 300;
+}
+.note {
+    font-family: 'Nothing You Could Do', cursive;
+    letter-spacing: 0.06em;
 }
 .flex {
     display: flex;
