--- a/app/assets/stylesheets/mixins.scss
+++ b/app/assets/stylesheets/mixins.scss
@@ -132,3 +132,14 @@
         margin-bottom: 0;
     }
 }
+.underline {
+    padding-bottom: 0.25em;
+    border-bottom: 1px solid;
+    margin-bottom: 1em;
+}
+.card {
+    padding: 1em;
+    border: 1px solid;
+    background-color: #fff;
+    border-radius: 0.25rem;
+}
