in work charts stuff

--- a/app/views/assistance_provider_dashboard/index.html.haml
+++ b/app/views/assistance_provider_dashboard/index.html.haml
@@ -19,6 +19,27 @@
     %h3 Total need
     = @qualified_need.total_needed
 
+    %h3 Total need
+    = @qualified_need.total_needed
+
+    %h3 Total need
+    = @qualified_need.total_needed
+
+    %h3 Total need
+    = @qualified_need.total_needed
+
+    %h3 Total need
+    = @qualified_need.total_needed
+
+    %h3 Total need
+    = @qualified_need.total_needed
+
+    %h3 Total need
+    = @qualified_need.total_needed
+
+    %h3 Total need
+    = @qualified_need.total_needed
+
     %h4 Deadline
     = @qualified_need.deadline
 
