--- a/app/views/care_coordinator_dashboard/index.html.haml
+++ b/app/views/care_coordinator_dashboard/index.html.haml
@@ -11,6 +11,12 @@
 %section
   %h2 Care Coordinator Dashboard
 
+  = pie_chart({"Football" => 10, "Basketball" => 5})
+
+  -#= line_chart(@all_events.map { |event|
+  -#  {name: event.name, data: event.group_by_day(:created_at).count}
+  -#}
+
   -#%event-map
 
   %care-coordinator
