added notes to need, and added files to assistant dashboard

--- a/app/views/assistance_provider_dashboard/index.html.haml
+++ b/app/views/assistance_provider_dashboard/index.html.haml
@@ -16,33 +16,24 @@
   %section
     %h2 Assistance Provider Dashboard
 
-    %h3 Total need
+    %h3 Total Need
     = @qualified_need.total_needed
 
-    %h3 Total need
-    = @qualified_need.total_needed
-
-    %h3 Total need
-    = @qualified_need.total_needed
-
-    %h3 Total need
-    = @qualified_need.total_needed
-
-    %h3 Total need
-    = @qualified_need.total_needed
-
-    %h3 Total need
-    = @qualified_need.total_needed
-
-    %h3 Total need
-    = @qualified_need.total_needed
-
-    %h3 Total need
-    = @qualified_need.total_needed
-
-    %h4 Deadline
+    %h3 Deadline
     = @qualified_need.deadline
 
+    %h3 Point of Contact
+    = @qualified_need.point_of_contact
+
+    %h3 Phone
+    = @qualified_need.phone
+
+    %h3 Address
+    = @qualified_need.address
+
+    %h3 Notes
+    = @qualified_need.notes
+    
     %p
       = link_to 'Pledge!', pledge_path(@qualified_need.id)
     %p
