--- a/app/assets/stylesheets/mixins.scss
+++ b/app/assets/stylesheets/mixins.scss
@@ -2,6 +2,7 @@
 // fonts
 @import "//fonts.googleapis.com/css?family=Muli:300,400|Roboto:300,400,700";
 @import "//fonts.googleapis.com/css?family=Nothing+You+Could+Do";
+@import "//fonts.googleapis.com/css?family=Source+Serif+Pro";
 @import "//fonts.googleapis.com/css?family=Amaranth";
 
 .muli {
@@ -11,6 +12,9 @@
 .roboto {
     font-family: 'Roboto', sans-serif;
     font-weight: 300;
+}
+.logo {
+    font-family: 'Source Serif Pro', sans-serif;
 }
 .slab {
     font-family: 'Amaranth', sans-serif;
