--- a/app/views/assistance_provider_dashboard/index.html.haml
+++ b/app/views/assistance_provider_dashboard/index.html.haml
@@ -14,7 +14,9 @@
   - if !@qualified_need
     .jumbo
       %p
-        We have no immediate needs in your area at the moment, but as always, we will notify you when someone needs your help.
+        We have no immediate needs in your area at the moment.
+        %br
+        We will notify you when someone needs your help.
 
   - if @qualified_need
     .card
